切一个Java分支，可运行

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ android {
 dependencies {
   implementation project(':emoji-ios')
   implementation project(':emoji-google')
-  implementation project(':emoji-google-compat')
+//  implementation project(':emoji-google-compat')
   implementation project(':emoji-twitter')
   implementation project(':emoji-facebook')
   implementation project(':emoji-material')
