--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.vanniktech.emoji.sample">
+  <!--      android:dataExtractionRules="@null"-->
   <application
       android:allowBackup="false"
       android:fullBackupContent="false"
-      android:dataExtractionRules="@null"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
       android:name=".EmojiApplication"
