--- a/emoji-google/build.gradle
+++ b/emoji-google/build.gradle
@@ -20,4 +20,4 @@ dependencies {
   api project(':emoji')
 }
 
-apply plugin: "com.vanniktech.maven.publish"
+//apply plugin: "com.vanniktech.maven.publish"
