--- a/emoji-material/build.gradle
+++ b/emoji-material/build.gradle
@@ -18,7 +18,7 @@ android {
 
 dependencies {
   api project(':emoji')
-  api "com.google.android.material:material:1.5.0"
+  api "com.google.android.material:material:1.3.0"
 }
 
-apply plugin: "com.vanniktech.maven.publish"
+//apply plugin: "com.vanniktech.maven.publish"
