--- a/emoji/build.gradle
+++ b/emoji/build.gradle
@@ -18,7 +18,8 @@ android {
 }
 
 dependencies {
-  api "androidx.appcompat:appcompat:1.4.1"
+//  api "androidx.appcompat:appcompat:1.4.1"
+  api "androidx.appcompat:appcompat:1.1.0"
   api "androidx.cardview:cardview:1.0.0"
   api "androidx.recyclerview:recyclerview:1.2.1"
 }
@@ -29,4 +30,4 @@ dependencies {
   testImplementation "org.robolectric:robolectric:4.7.3"
 }
 
-apply plugin: "com.vanniktech.maven.publish"
+//apply plugin: "com.vanniktech.maven.publish"
