--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
 }
 
 dependencies {
-  debugImplementation "com.squareup.leakcanary:leakcanary-android:2.9.1"
+//  debugImplementation "com.squareup.leakcanary:leakcanary-android:2.9.1"
 }
 
 dependencies {
